<resources>
    <string name="app_name">One Thousand Words</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello. Im the ListView. I havent been implemented yet, but you look great today! :)</string>
    <string name="email">Email</string>
    <string name="email_hint">Your Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Your Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="new_draw">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="newDraw">New</string>
    <string name="back">Back</string>
    <string name="paint">Paint</string>
    <string name="s">Smallest</string>
    <string name="m">Small</string>
    <string name="m2">Medium</string>
    <string name="l">Large</string>
    <string name="logout">Logout</string>
    <string name="logout_btn">Logout</string>
    <string name="upload">Upload</string>

</resources>
