<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="edu.fsu.cs.mobile.onethousandwords.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:src="@drawable/onethousandwords"
            android:layout_weight="0.5"/>

        <TextView
            android:textStyle="italic"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="35dp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:hint="@string/email_hint"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_marginLeft="30dp"
            android:hint="@string/password_hint"
            android:layout_width="325dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_width="325dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/create_account_txt"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>
