<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.fsu.cs.mobile.onethousandwords.DrawingFragment"
    android:background="@color/bg">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="1dp">

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:src="@drawable/save"
            android:scaleType="fitCenter"
            android:elevation="4dp"/>

        <ImageButton
            android:id="@+id/brush_btn"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:src="@drawable/brush"
            android:scaleType="fitCenter"
            android:elevation="4dp"/>

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:src="@drawable/draw"
            android:scaleType="fitCenter"
            android:elevation="4dp"/>

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:src="@drawable/erase"
            android:scaleType="fitCenter"
            android:elevation="4dp"/>

        <ImageButton
            android:id="@+id/record_btn"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:src="@drawable/record"
            android:scaleType="fitCenter"
            android:elevation="4dp"/>

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:src="@drawable/play"
            android:scaleType="fitCenter"
            android:elevation="4dp"/>

    </LinearLayout>

        <edu.fsu.cs.mobile.onethousandwords.DrawingView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/whitebg"
            android:id="@+id/draw"
            android:layout_weight="0.95" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/brush_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/c2"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF0000"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FFFF0000" />

                <ImageButton
                    android:id="@+id/c1"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF660000"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FF660000" />

                <ImageButton
                    android:id="@+id/c3"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF6600"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FFFF6600" />

                <ImageButton
                    android:id="@+id/c4"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFFCC00"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FFFFCC00" />

                <ImageButton
                    android:id="@+id/c5"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF009900"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FF009900" />

                <ImageButton
                    android:id="@+id/c6"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF009999"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FF009999" />

                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/c7"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF0000FF"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FF0000FF" />

                <ImageButton
                    android:id="@+id/c8"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF990099"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FF990099" />

                <ImageButton
                    android:id="@+id/c9"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF6666"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FFFF6666" />

                <ImageButton
                    android:id="@+id/c10"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFFFFFF"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FFFFFFFF" />

                <ImageButton
                    android:id="@+id/c11"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF787878"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FF787878" />

                <ImageButton
                    android:id="@+id/c12"
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF000000"
                    android:contentDescription="@string/paint"
                    android:src="@drawable/paint"
                    android:tag="#FF000000" />

                <Button
                    android:id="@+id/logout_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_btn" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>

